--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -45,12 +45,9 @@ jobs:
           override: true
       - run: cargo fetch
       - name: cargo test build
-        # Note the use of release here means longer compile time, but much
-        # faster test execution time. If you don't have any heavy tests it
-        # might be faster to take off release and just compile in debug
-        run: cargo build --tests --release
+        run: cargo build --tests
       - name: cargo test
-        run: cargo test --release
+        run: cargo test
 
   deny-check:
     name: cargo-deny
@@ -70,4 +67,7 @@ jobs:
           override: true
       - run: cargo fetch
       - name: cargo publish check
-        run: cargo publish --dry-run
+        run: |
+          cargo publish --dry-run --manifest-path exception-handler/Cargo.toml
+          cargo publish --dry-run --manifest-path minidumper/Cargo.toml
+          cargo publish --dry-run --manifest-path uctx/Cargo.toml
