--- a/exception-handler/Cargo.toml
+++ b/exception-handler/Cargo.toml
@@ -19,8 +19,6 @@ parking_lot = "0.11"
 [target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
 # Wrapper around libc
 libc = "0.2"
-# Defines a few things not in libc
-nix = "0.23"
 # Portable ucontext replacement, particularly for musl
 uctx = { path = "../uctx" }
 
@@ -30,4 +28,5 @@ uctx = { path = "../uctx" }
 cc = { version = "1.0", features = ["parallel"] }
 
 [dev-dependencies]
-minidump_writer_linux = { path = "../../minidump_writer_linux" }
+sadness-generator = { path = "../sadness-generator" }
+setjmp = "0.1"
