--- a/minidumper-test/Cargo.toml
+++ b/minidumper-test/Cargo.toml
@@ -5,17 +5,16 @@ edition = "2021"
 publish = false
 
 [[bin]]
-name = "client"
+name = "crash-client"
 path = "src/bin.rs"
 
 [dependencies]
 anyhow = "1.0"
-assert_cmd = "2.0"
 clap = "3.0.0-beta.5"
 cfg-if = "1.0"
 exception-handler = { path = "../exception-handler" }
 minidump = "0.9"
 minidumper = { path = "../minidumper" }
-predicates = "2.0"
+notify-rust = "4.5"
 sadness-generator = { path = "../sadness-generator" }
 tracing-subscriber = { version = "0.3" }
