--- a/exception-handler/Cargo.toml
+++ b/exception-handler/Cargo.toml
@@ -10,6 +10,12 @@ documentation = "https://docs.rs/exception-handler"
 homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/exception-handler"
 keywords = ["breakpad", "minidump", "crash", "signal", "exception"]
 
+[features]
+default = []
+# If enabled, will log out information when a signal is raised/exception thrown
+# but logged in a manner that is safe.
+debug-print = []
+
 [dependencies]
 # Nicer handling of complex cfg expressions
 cfg-if = "1.0"
