Replace C with asm

--- a/sadness-generator/Cargo.toml
+++ b/sadness-generator/Cargo.toml
@@ -2,7 +2,8 @@
 name = "sadness-generator"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.59.0"
 publish = false
 
-[build-dependencies]
-cc = "1.0"
+[dependencies]
+libc = "0.2"
