Update to clap 3.1

--- a/minidumper-test/Cargo.toml
+++ b/minidumper-test/Cargo.toml
@@ -14,7 +14,7 @@ path = "src/crash-server.rs"
 
 [dependencies]
 anyhow = "1.0"
-clap = "3.0.0-beta.5"
+clap = { version = "3.1", features = ["derive"] }
 cfg-if = "1.0"
 exception-handler = { path = "../exception-handler", features = [
     "debug-print",
