--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ members = [
 debug = 2
 
 [patch.crates-io]
-minidump = { git = "https://github.com/luser/rust-minidump", rev = "b8e6b18c3164c124c12d9ce9819e4cb9809b5e09" }
-minidump-common = { git = "https://github.com/luser/rust-minidump", rev = "b8e6b18c3164c124c12d9ce9819e4cb9809b5e09" }
+minidump = { git = "https://github.com/EmbarkStudios/rust-minidump", branch = "master" }
+minidump-common = { git = "https://github.com/EmbarkStudios/rust-minidump", branch = "master" }
