--- a/crash-context/Cargo.toml
+++ b/crash-context/Cargo.toml
@@ -8,11 +8,12 @@ license = "Apache-2.0 OR MIT"
 [features]
 # If enabled, adds support for filling out the target specific CPU context
 # from a crash context
-fill-minidump = ["minidump-common"]
+fill-minidump = ["minidump-common", "scroll"]
 
 [dependencies]
 cfg-if = "1.0"
 minidump-common = { version = "0.9", optional = true }
+scroll = { version = "0.11", optional = true }
 
-[target.'cfg(unix)'.dev-dependencies]
+[target.'cfg(unix)'.dependencies]
 libc = "0.2"
