--- a/minidumper-test/Cargo.toml
+++ b/minidumper-test/Cargo.toml
@@ -21,7 +21,8 @@ exception-handler = { path = "../exception-handler", features = [
 ] }
 minidump = "0.9"
 minidumper = { path = "../minidumper" }
-notify-rust = "4.5"
+# This has some crazy dependencies, can enable manually if needed
+#notify-rust = "4.5"
 rayon = "1.5"
 sadness-generator = { path = "../sadness-generator" }
 tracing-subscriber = { version = "0.3" }
