--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2021"
 [dependencies]
 # Nicer cfg handling
 cfg-if = "1.0"
+crash-context = { path = "../crash-context" }
 libc = "0.2"
 # Basic log emitting
 log = "0.4"
 # Nicer error creation
 thiserror = "1.0"
 # Minidump writing (currently linux/android only)
-#minidump-writer = { git = "https://github.com/EmbarkStudios/minidump_writer_linux", rev = "7e6f130" }
-minidump-writer = { path = "../minidump-writer" }
+minidump-writer = { git = "https://github.com/EmbarkStudios/minidump_writer_linux", branch = "changes" }
 
 [target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
 # Event loop for uds
