--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2021"
 [dependencies]
 # Nicer cfg handling
 cfg-if = "1.0"
-crash-context = { path = "../crash-context" }
+crash-context = "0.0.1"
 libc = "0.2"
 # Basic log emitting
 log = "0.4"
+# Minidump writing (currently linux/android only)
+minidump-writer = "0.1"
 # Nicer error creation
 thiserror = "1.0"
-# Minidump writing (currently linux/android only)
-#minidump-writer = { git = "https://github.com/EmbarkStudios/minidump_writer_linux", branch = "changes" }
-minidump-writer = { path = "../../minidump_writer_linux" }
 
 [target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
 # Event loop for uds
