--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ debug = 2
 [patch.crates-io]
 minidump = { git = "https://github.com/EmbarkStudios/rust-minidump", branch = "master" }
 minidump-common = { git = "https://github.com/EmbarkStudios/rust-minidump", branch = "master" }
-minidump-writer = { path = "../minidump_writer_linux" }
+minidump-writer = { git = "https://github.com/EmbarkStudios/minidump_writer_linux", branch = "flesh-out-arm" }
