--- a/crash-context/Cargo.toml
+++ b/crash-context/Cargo.toml
@@ -14,6 +14,7 @@ documentation = "https://docs.rs/crash-context"
 homepage = "https://github.com/EmbarkStudios/crash-context"
 categories = ["external-ffi-bindings"]
 keywords = ["crash", "libc", "getcontext"]
+rust-version = "1.59.0" # We use global_asm!
 
 [dependencies]
 cfg-if = "1.0"
