--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ members = [
 debug = 2
 
 [patch.crates-io]
-minidump = { git = "https://github.com/EmbarkStudios/rust-minidump", branch = "master" }
-minidump-common = { git = "https://github.com/EmbarkStudios/rust-minidump", branch = "master" }
-minidump-writer = { git = "https://github.com/EmbarkStudios/minidump_writer_linux", branch = "flesh-out-arm" }
+minidump = { git = "https://github.com/luser/rust-minidump", branch = "master" }
+minidump-common = { git = "https://github.com/luser/rust-minidump", branch = "master" }
+minidump-writer = { git = "https://github.com/msirringhaus/minidump_writer_linux", branch = "main" }
