--- a/crash-context/Cargo.toml
+++ b/crash-context/Cargo.toml
@@ -21,3 +21,11 @@ cfg-if = "1.0"
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
+
+[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
+version = "0.34"
+features = [
+    "Win32_Foundation",
+    "Win32_System_Diagnostics_Debug",
+    "Win32_System_Kernel",
+]
