--- a/exception-handler/Cargo.toml
+++ b/exception-handler/Cargo.toml
@@ -19,15 +19,22 @@ debug-print = []
 [dependencies]
 # Nicer handling of complex cfg expressions
 cfg-if = "1.0"
-# Nicer sync primitives
-parking_lot = "0.12"
 # Definition of a portable crash-context that can be shared between various
 # crates
-crash-context = "0.0.2"
-
-[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
+crash-context = { version = "0.0.2", path = "../crash-context" }
 # Wrapper around libc
 libc = "0.2"
+# Nicer sync primitives
+parking_lot = "0.12"
+
+[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
+version = "0.34"
+features = [
+    "Win32_Foundation",
+    "Win32_System_Diagnostics_Debug",
+    "Win32_System_Kernel",
+    "Win32_System_Threading",
+]
 
 [dev-dependencies]
 sadness-generator = { path = "../sadness-generator" }
