--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
 debug = 2
 
 [patch.crates-io]
-minidump = { git = "https://github.com/luser/rust-minidump", branch = "master" }
-minidump-common = { git = "https://github.com/luser/rust-minidump", branch = "master" }
-minidump-writer = { git = "https://github.com/msirringhaus/minidump_writer_linux", branch = "main" }
+#minidump-writer = { git = "https://github.com/msirringhaus/minidump_writer_linux", branch = "main" }
+minidump-writer = { path = "../mdw" }
+mio = { git = "https://github.com/EmbarkStudios/mio", branch = "master" }
+crash-context = { path = "crash-context" }
