--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -35,8 +35,9 @@ scroll = "0.11"
 version = "0.34" # Matches the version used in mio/miow
 features = [
     "Win32_Foundation",         # Core types eg HANDLE
-    "Win32_System_Threading",   # *Event functions, OpenProcess
     "Win32_Networking_WinSock", # Sockets
+    "Win32_Storage_FileSystem", # GetTempPath2W
+    "Win32_System_Threading",   # *Event functions, OpenProcess
 ]
 
 [dev-dependencies]
