--- a/minidumper-test/Cargo.toml
+++ b/minidumper-test/Cargo.toml
@@ -9,18 +9,13 @@ publish = false
 name = "crash-client"
 path = "src/crash-client.rs"
 
-[[bin]]
-name = "crash-server"
-path = "src/crash-server.rs"
-
 [dependencies]
 anyhow = "1.0"
 clap = { version = "3.1", features = ["derive"] }
 cfg-if = "1.0"
-exception-handler = { path = "../exception-handler", features = [
-    "debug-print",
-] }
+exception-handler = { path = "../exception-handler" }
 minidump = "0.10"
+minidump-common = "0.10"
 minidumper = { path = "../minidumper" }
 # This has some crazy dependencies, can enable manually if needed
 #notify-rust = "4.5"
