--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -12,22 +12,18 @@ libc = "0.2"
 log = "0.4"
 # Minidump writing (currently linux/android only)
 minidump-writer = "0.1"
+# Event loop
+polling = "2.2"
 # Nicer locking primitives
 parking_lot = "0.12"
 # Nicer error creation
 thiserror = "1.0"
 
 [target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
-# Event loop
-mio = "0.8"
 # Improved Unix domain socket support, includes features that are not available in std
-uds = { git = "https://github.com/EmbarkStudios/uds", branch = "master", features = [
-    "mio_08",
-] }
+uds = { git = "https://github.com/EmbarkStudios/uds", branch = "master" }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-# Event loop
-polling = "2.2"
 # Nicer binary interop
 scroll = "0.11"
 
