--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -28,7 +28,7 @@ uds = { git = "https://github.com/EmbarkStudios/uds", branch = "master" }
 scroll = "0.11"
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-sys]
-version = "0.34" # Matches the version used in mio/miow
+version = "0.34"
 features = [
     "Win32_Foundation",         # Core types eg HANDLE
     "Win32_Networking_WinSock", # Sockets
