--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -33,8 +33,7 @@ features = [
     "Win32_Foundation",         # Core types eg HANDLE
     "Win32_Networking_WinSock", # Sockets
     "Win32_System_IO",          # Sockets
-    "Win32_Storage_FileSystem", # GetTempPath2W
-    "Win32_System_Threading",   # *Event functions, OpenProcess
+    "Win32_System_Threading",   # OpenProcess
 ]
 
 [dev-dependencies]
