--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -28,13 +28,12 @@ uds = { git = "https://github.com/EmbarkStudios/uds", branch = "master" }
 scroll = "0.11"
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-sys]
-version = "0.34" # Matches the version used in mio/miow
+version = "0.34"
 features = [
     "Win32_Foundation",         # Core types eg HANDLE
     "Win32_Networking_WinSock", # Sockets
     "Win32_System_IO",          # Sockets
-    "Win32_Storage_FileSystem", # GetTempPath2W
-    "Win32_System_Threading",   # *Event functions, OpenProcess
+    "Win32_System_Threading",   # OpenProcess
 ]
 
 [dev-dependencies]
