Oops, no need for this without mio

--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -21,7 +21,7 @@ thiserror = "1.0"
 
 [target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
 # Improved Unix domain socket support, includes features that are not available in std
-uds = { git = "https://github.com/EmbarkStudios/uds", branch = "master" }
+uds = "0.2.6"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 # Nicer binary interop
