--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -11,7 +11,7 @@ libc = "0.2"
 # Basic log emitting
 log = "0.4"
 # Minidump writing (currently linux/android only)
-minidump-writer = { git = "https://github.com/EmbarkStudios/minidump_writer_linux", branch = "main" }
+minidump-writer = { git = "https://github.com/EmbarkStudios/minidump_writer_linux", rev = "7f5b7d7" } # branch = "main"
 # Event loop
 polling = "2.2"
 # Nicer locking primitives
