--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -11,7 +11,8 @@ libc = "0.2"
 # Basic log emitting
 log = "0.4"
 # Minidump writing (currently linux/android only)
-minidump-writer = { git = "https://github.com/EmbarkStudios/minidump_writer_linux", rev = "7f5b7d7" } # branch = "main"
+#minidump-writer = { git = "https://github.com/EmbarkStudios/minidump_writer_linux", rev = "7f5b7d7" } # branch = "main"
+minidump-writer = { path = "../../mdw" }
 # Event loop
 polling = "2.2"
 # Nicer locking primitives
@@ -19,11 +20,11 @@ parking_lot = "0.12"
 # Nicer error creation
 thiserror = "1.0"
 
-[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
+[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "macos"))'.dependencies]
 # Improved Unix domain socket support, includes features that are not available in std
 uds = "0.2.6"
 
-[target.'cfg(target_os = "windows")'.dependencies]
+[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
 # Nicer binary interop
 scroll = "0.11"
 
