--- a/crash-context/Cargo.toml
+++ b/crash-context/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "crash-context"
 version = "0.0.3"
-description = "Provides portable types containing target specific contextual information at the time of an exception"
+description = "Provides portable types containing target specific contextual information at the time of a crash"
 repository = "https://github.com/EmbarkStudios/crash-handling"
 authors = [
     "Embark <opensource@embark-studios.com>",
@@ -21,14 +21,6 @@ cfg-if = "1.0"
 
 [target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
 libc = "0.2"
-
-[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
-version = "0.34"
-features = [
-    "Win32_Foundation",
-    "Win32_System_Diagnostics_Debug",
-    "Win32_System_Kernel",
-]
 
 [target.'cfg(target_os = "macos")'.dependencies]
 mach2 = "0.4"
