--- a/crash-handler/Cargo.toml
+++ b/crash-handler/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "exception-handler"
-description = "Allows running of user code during exceptional events"
+name = "crash-handler"
+description = "Allows running of user code during crash events"
 repository = "https://github.com/EmbarkStudios/crash-handling"
 version = "0.0.1"
 authors = ["Embark <opensource@embark-studios.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
-documentation = "https://docs.rs/exception-handler"
-homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/exception-handler"
+documentation = "https://docs.rs/crash-handler"
+homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/crash-handler"
 keywords = ["breakpad", "minidump", "crash", "signal", "exception"]
 
 [features]
