--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -41,7 +41,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        os: [ubuntu-20.04, "windows-2022"]
+        os: [ubuntu-20.04, windows-2022, macos-11]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
