Fix incorrect crate name

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -80,6 +80,6 @@ jobs:
       - run: cargo fetch
       - name: cargo publish check
         run: |
-          cargo publish --dry-run --manifest-path exception-handler/Cargo.toml
+          cargo publish --dry-run --manifest-path crash-handler/Cargo.toml
           #cargo publish --dry-run --manifest-path minidumper/Cargo.toml
           cargo publish --dry-run --manifest-path crash-context/Cargo.toml
