Ignore new old windows-sys version

--- a/deny.toml
+++ b/deny.toml
@@ -56,6 +56,8 @@ skip = [
     { name = "num-traits", version = "=0.1.43" },
     # debugid uses the pre-1.0 version
     { name = "uuid", version = "=0.8.2" },
+    # parking_lot is out of date again
+    { name = "windows-sys", version = "=0.34" },
 ]
 
 [sources]
