--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -41,7 +41,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        os: [ubuntu-20.04, "windows-2022"]
+        os: [ubuntu-20.04, windows-2022, macos-11]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -80,6 +80,6 @@ jobs:
       - run: cargo fetch
       - name: cargo publish check
         run: |
-          cargo publish --dry-run --manifest-path exception-handler/Cargo.toml
+          cargo publish --dry-run --manifest-path crash-handler/Cargo.toml
           #cargo publish --dry-run --manifest-path minidumper/Cargo.toml
           cargo publish --dry-run --manifest-path crash-context/Cargo.toml
