--- a/crash-handler/Cargo.toml
+++ b/crash-handler/Cargo.toml
@@ -28,7 +28,7 @@ libc = "0.2"
 parking_lot = "0.12"
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-sys]
-version = "0.35"
+version = "0.34" # Keep aligned with parking_lot & minidump-writer
 features = [
     "Win32_Foundation",
     "Win32_System_Diagnostics_Debug",
