--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -42,7 +42,7 @@ uds = "0.2.6"
 scroll = "0.11"
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-sys]
-version = "0.35"
+version = "0.34" # Keep aligned with parking_lot & minidump-writer & crash-handler
 features = [
     "Win32_Foundation",         # Core types eg HANDLE
     "Win32_Networking_WinSock", # Sockets
