--- a/crash-context/Cargo.toml
+++ b/crash-context/Cargo.toml
@@ -17,10 +17,12 @@ keywords = ["crash", "libc", "getcontext"]
 rust-version = "1.59.0" # We use `global_asm!`
 
 [dependencies]
+# Nicer cfg handling
 cfg-if = "1.0"
 
 [target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
 libc = "0.2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
+# provides bindings to mach specifics
 mach2 = "0.4"
