--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -24,8 +24,7 @@ libc = "0.2"
 # Basic log emitting
 log = "0.4"
 # Minidump writing
-minidump-writer = { git = "https://github.com/EmbarkStudios/minidump-writer", rev = "699f248" } # branch = "macos"
-#minidump-writer = { path = "../../mdw" }
+minidump-writer = "0.2"
 # Event loop
 polling = "2.2"
 # Nicer locking primitives
@@ -42,7 +41,7 @@ uds = "0.2.6"
 scroll = "0.11"
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-sys]
-version = "0.34" # Keep aligned with parking_lot & minidump-writer & crash-handler
+version = "0.36" # Keep aligned with parking_lot & minidump-writer & crash-handler
 features = [
     "Win32_Foundation",         # Core types eg HANDLE
     "Win32_Networking_WinSock", # Sockets
