--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -84,5 +84,5 @@ jobs:
       - name: cargo publish check
         run: |
           cargo publish --dry-run --manifest-path crash-handler/Cargo.toml
-          #cargo publish --dry-run --manifest-path minidumper/Cargo.toml
+          cargo publish --dry-run --manifest-path minidumper/Cargo.toml
           cargo publish --dry-run --manifest-path crash-context/Cargo.toml
