--- a/crash-handler/Cargo.toml
+++ b/crash-handler/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 authors = ["Embark <opensource@embark-studios.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
+readme = "README.md"
 documentation = "https://docs.rs/crash-handler"
 homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/crash-handler"
 keywords = ["breakpad", "minidump", "crash", "signal", "exception"]
