--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "minidumper"
 version = "0.1.0"
-description = "Provides a client and server"
+description = "IPC impl for creating a minidump for a crashed process"
 repository = "https://github.com/EmbarkStudios/crash-handling"
 authors = [
     "Embark <opensource@embark-studios.com>",
