--- a/crash-handler/Cargo.toml
+++ b/crash-handler/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 authors = ["Embark <opensource@embark-studios.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
+readme = "README.md"
 documentation = "https://docs.rs/crash-handler"
 homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/crash-handler"
 keywords = ["breakpad", "minidump", "crash", "signal", "exception"]
@@ -28,7 +29,7 @@ libc = "0.2"
 parking_lot = "0.12"
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-sys]
-version = "0.34" # Keep aligned with parking_lot & minidump-writer
+version = "0.36" # Keep aligned with parking_lot & minidump-writer
 features = [
     "Win32_Foundation",
     "Win32_System_Diagnostics_Debug",
