Setup cargo-release

--- a/minidumper-test/Cargo.toml
+++ b/minidumper-test/Cargo.toml
@@ -22,3 +22,6 @@ minidumper = { path = "../minidumper" }
 rayon = "1.5"
 sadness-generator = { path = "../sadness-generator" }
 tracing-subscriber = { version = "0.3" }
+
+[package.metadata.release]
+release = false
