--- a/crash-handler/Cargo.toml
+++ b/crash-handler/Cargo.toml
@@ -22,7 +22,7 @@ debug-print = []
 cfg-if = "1.0"
 # Definition of a portable crash-context that can be shared between various
 # crates
-crash-context = "0.3"
+crash-context = { version = "0.3", path = "../crash-context" }
 # Wrapper around libc
 libc = "0.2"
 # Nicer sync primitives
