--- a/deny.toml
+++ b/deny.toml
@@ -55,10 +55,7 @@ skip = [
     # not seen a release in 5 years
     { name = "num-traits", version = "=0.1.43" },
 ]
-skip-tree = [
-    # parking_lot is out of date again
-    { name = "windows-sys", version = "=0.34" },
-]
+skip-tree = []
 
 [sources]
 unknown-registry = "deny"
