--- a/deny.toml
+++ b/deny.toml
@@ -24,26 +24,6 @@ default = "deny"
 confidence-threshold = 0.8
 exceptions = [{ allow = ["Unicode-DFS-2016"], name = "unicode-ident" }]
 
-# Some crates don't have (easily) machine readable licensing information,
-# adding a clarification entry for it allows you to manually specify the
-# licensing information
-#[[licenses.clarify]]
-# The name of the crate the clarification applies to
-#name = "ring"
-# The optional version constraint for the crate
-#version = "*"
-# The SPDX expression for the license requirements of the crate
-#expression = "MIT AND ISC AND OpenSSL"
-# One or more files in the crate's source used as the "source of truth" for
-# the license expression. If the contents match, the clarification will be used
-# when running the license check, otherwise the clarification will be ignored
-# and the crate will be checked normally, which may produce warnings or errors
-# depending on the rest of your configuration
-#license-files = [
-# Each entry is a crate relative path, and the (opaque) hash of its contents
-#{ path = "LICENSE", hash = 0xbd0eed23 }
-#]
-
 [bans]
 multiple-versions = "deny"
 deny = []
@@ -61,3 +41,6 @@ skip-tree = []
 unknown-registry = "deny"
 unknown-git = "deny"
 allow-git = []
+
+[sources.allow-org]
+github = ["rust-minidump"]
