allow minidumper-test to operate as a binary for minidump-pipeline to manipulate

--- a/minidumper-test/Cargo.toml
+++ b/minidumper-test/Cargo.toml
@@ -6,6 +6,9 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [[bin]]
+name = "minidumper-test"
+
+[[bin]]
 name = "crash-client"
 path = "src/crash-client.rs"
 
