--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crash-handler",
     "minidumper",
     "minidumper-test",
+    "minidumper-test/crash-client",
     "sadness-generator",
 ]
 
