--- a/minidumper-test/Cargo.toml
+++ b/minidumper-test/Cargo.toml
@@ -8,6 +8,10 @@ publish = false
 [[bin]]
 name = "minidumper-test"
 
+[[bin]]
+name = "crash-client"
+path = "crash-client/src/main.rs"
+
 [dependencies]
 anyhow = "1.0"
 clap = { version = "3.1", features = ["derive"] }
