is this the right incantation?

--- a/minidumper-test/crash-client/Cargo.toml
+++ b/minidumper-test/crash-client/Cargo.toml
@@ -20,3 +20,5 @@ minidumper = { path = "../../minidumper" }
 rayon = "1.5"
 sadness-generator = { path = "../../sadness-generator" }
 tracing-subscriber = { version = "0.3" }
+
+[workspace]
