allow minidumper-test to operate as a binary for minidump-pipeline to manipulate (#51)
* allow minidumper-test to operate as a binary for minidump-pipeline to manipulate

* experimentally split up crash-client

* fixup workspace

* more hacky experiments

* ok but what if it doesn't need to be a member

* no you're really not in the workspace

* is this the right incantation?

--- a/minidumper-test/crash-client/Cargo.toml
+++ b/minidumper-test/crash-client/Cargo.toml
@@ -1,30 +1,24 @@
 [package]
-name = "minidumper-test"
+name = "crash-client"
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
 publish = false
 
-[[bin]]
-name = "minidumper-test"
-
-[[bin]]
-name = "crash-client"
-path = "crash-client/src/main.rs"
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+minidumper-test = { path = "../" }
 anyhow = "1.0"
 clap = { version = "3.1", features = ["derive"] }
 cfg-if = "1.0"
-crash-handler = { path = "../crash-handler" }
+crash-handler = { path = "../../crash-handler" }
 minidump = "0.12"
 minidump-common = "0.12"
-minidumper = { path = "../minidumper" }
+minidumper = { path = "../../minidumper" }
 # This has some crazy dependencies, can enable manually if needed
 #notify-rust = "4.5"
 rayon = "1.5"
-sadness-generator = { path = "../sadness-generator" }
+sadness-generator = { path = "../../sadness-generator" }
 tracing-subscriber = { version = "0.3" }
 
-[package.metadata.release]
-release = false
+[workspace]
