--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -52,6 +52,7 @@ features = [
 [dev-dependencies]
 # Diskwrite example
 crash-handler = { path = "../crash-handler" }
+pretty_env_logger = "0.4.0"
 # uuid generation
 uuid = { version = "1.0", features = ["v4"] }
 backtrace = "0.3"
