Fix mac lint/deny

--- a/deny.toml
+++ b/deny.toml
@@ -8,7 +8,10 @@ targets = [
 vulnerability = "deny"
 unmaintained = "deny"
 yanked = "deny"
-ignore = []
+ignore = [
+    # ansi_term is unmaintained, but it works so...
+    "RUSTSEC-2021-0139",
+]
 
 [licenses]
 unlicensed = "deny"
