--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ members = [
 
 [profile.dev]
 debug = 2
+
+[patch.crates-io]
+minidump-writer = { git = "https://github.com/rust-minidump/minidump-writer", branch = "bump" }
