Add abort handling (#63)
* Add handling of SIGABRT on windows

* Start removing windows-sys from crash-handler

* Fix raise_purecall on aarch64

* Replace windowss-sys with winapi

* Update minidump-writer/crash-context

* Ignore duplicate memoffset

--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -19,12 +19,12 @@ keywords = ["crash", "minidump", "ipc", "out-of-process"]
 [dependencies]
 # Nicer cfg handling
 cfg-if = "1.0"
-crash-context = "0.4"
+crash-context = "0.5"
 libc = "0.2"
 # Basic log emitting
 log = "0.4"
 # Minidump writing
-minidump-writer = "0.5"
+minidump-writer = "0.7"
 # Event loop
 polling = "2.2"
 # Nicer locking primitives
@@ -40,14 +40,10 @@ uds = "0.2.6"
 # Nicer binary interop
 scroll = "0.11"
 
-[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
-version = "0.42" # Keep aligned with parking_lot & minidump-writer & crash-handler
-features = [
-    "Win32_Foundation",         # Core types eg HANDLE
-    "Win32_Networking_WinSock", # Sockets
-    "Win32_System_IO",          # Sockets
-    "Win32_System_Threading",   # OpenProcess
-]
+# Bindings to Win32
+[target.'cfg(target_os = "windows")'.dependencies.winapi]
+version = "0.3"
+features = ["handleapi", "winbase", "winsock2"]
 
 [dev-dependencies]
 # Diskwrite example
@@ -55,4 +51,3 @@ crash-handler = { path = "../crash-handler" }
 pretty_env_logger = "0.4.0"
 # uuid generation
 uuid = { version = "1.0", features = ["v4"] }
-backtrace = "0.3"
