--- a/deny.toml
+++ b/deny.toml
@@ -3,26 +3,19 @@ targets = [
     { triple = "x86_64-unknown-linux-musl" },
     { triple = "x86_64-pc-windows-msvc" },
 ]
+# This crate is not published, exclude it since it triggers various warnings
+# downstream users wouldn't see
+exclude = ["minidumper-test"]
 
 [advisories]
 vulnerability = "deny"
 unmaintained = "deny"
 yanked = "deny"
-ignore = [
-    # PR https://github.com/rust-minidump/rust-minidump/pull/826 already merged, just needs release
-    "RUSTSEC-2021-0153",
-    # Irrelevant, dev-only
-    "RUSTSEC-2021-0145",
-]
+ignore = []
 
 [licenses]
 unlicensed = "deny"
-allow = [
-    "MIT",
-    "Apache-2.0",
-    # Unfortunately, encoding brings in a lot of crates with this license
-    "CC0-1.0",
-]
+allow = ["MIT", "Apache-2.0"]
 copyleft = "deny"
 allow-osi-fsf-free = "neither"
 default = "deny"
@@ -31,22 +24,23 @@ exceptions = [{ allow = ["Unicode-DFS-2016"], name = "unicode-ident" }]
 
 [bans]
 multiple-versions = "deny"
-deny = []
+deny = [
+    # Incredibly heavyweight, we should never have a dependency on this
+    { name = "windows" },
+    # We should never have a dependency on openssl
+    { name = "openssl-sys" },
+]
 skip = [
     # The crate is in the repo, so we have the path, but it's also a crates.io
     # dependency
     { name = "crash-context" },
-
-    # minidump-writer uses old versions
-    { name = "memoffset", version = "=0.7.1" },
-    { name = "minidump-common", version = "=0.14.0" },
-    { name = "range-map", version = "=0.1.5" },
-    { name = "num-traits", version = "=0.1.43" },
-
-    { name = "syn", version = "1.0" },
-    { name = "bitflags", version = "=1.3.2" },
 ]
-skip-tree = []
+skip-tree = [
+    # parking_lot uses an old version https://github.com/Amanieu/parking_lot/pull/425,
+    # my original PR didn't have windows-targets since it's not needed at all,
+    # but it is what it is
+    { name = "windows-targets" },
+]
 
 [sources]
 unknown-registry = "deny"
@@ -54,4 +48,4 @@ unknown-git = "deny"
 allow-git = []
 
 [sources.allow-org]
-github = ["rust-minidump"]
+#github = ["rust-minidump"]
