--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -16,7 +16,7 @@ jobs:
     name: Lint
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2022, macos-11]
+        os: [ubuntu-22.04, windows-2022, macos-12]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -39,7 +39,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2022, macos-11]
+        os: [ubuntu-22.04, windows-2022, macos-12]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -59,8 +59,7 @@ jobs:
         job:
           #- { target: aarch64-unknown-linux-gnu, toolchain: stable }
           - { target: aarch64-unknown-linux-musl, toolchain: stable }
-          # workaround for https://github.com/cross-rs/cross/issues/1222
-          - { target: aarch64-linux-android, toolchain: "1.67.0" }
+          - { target: aarch64-linux-android, toolchain: stable }
     steps:
       - uses: actions/checkout@v3
       - name: Install Rust
@@ -70,11 +69,13 @@ jobs:
           target: ${{ matrix.job.target }}
       - uses: Swatinem/rust-cache@v2
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          use-cross: true
-          args: --target ${{ matrix.job.target }} --verbose --all-targets
+        # We need to install cross from git, because https://github.com/cross-rs/cross/issues/1222
+        # is still unreleased (it's been almost a year since the last release)
+        # and we can't use 1.67.0 any longer because some dependencies (sigh,
+        # home, really?) have a higher MSRV...so...
+        run: |
+          cargo install cross --git https://github.com/cross-rs/cross --rev 185398b
+          cross build --target ${{ matrix.job.target }} --verbose --all-targets
 
   deny-check:
     name: cargo-deny
